--- a/portfolio/virtuallab.html
+++ b/portfolio/virtuallab.html
@@ -94,7 +94,24 @@
 		All of the equipment controls are modeled and fully functional.
 	</p>
 	
-	<a href="virtuallab/Screenshot_3.png" target="_blank"><img src="virtuallab/Screenshot_3.png"></a>
+	<a href="virtuallab/knurling.png" target="_blank"><img src="virtuallab/knurling.png"></a>
+	
+	<p>
+		My favorite piece of geometry is probably the 
+		high-poly detectors with their knurling;
+		not necessarily a difficult trick, but always satisfying :)
+	</p>
+	
+	<a href="virtuallab/HVS.png" target="_blank"><img src="virtuallab/HVS.png"></a>
+	
+	<p>
+		My favorite texture is the High Voltage Supply.
+		The top-left logo parodying HP is my favorite touch.
+	</p>
+	
+	
+	
+	
 	
 	<h2>programming</h2>
 	
