--- a/workshop.html
+++ b/workshop.html
@@ -20,13 +20,22 @@
 	<h1 style="margin-bottom: 0;">VR Environment Workshop links</h1>
 	
 	<br>
+	
+	<p>
+		<a href="https://unity.com/download">
+			Unity Download >>>
+		</a>
+		<br>
+		Install Unity 2022+ inside Unity Hub.
+	</p>
 
 	<p>
 		<a href="https://mega.nz/folder/eRtwACAK#HxBc0Kvuw5Oofe0rf2Netg">
-			Unity Project Download >>>
+			Project Download >>>
 		</a>
 		<br>
-		Make sure you have Unity 2022+
+		Contains everything you need.
+		Download the zip file and unzip.
 	</p>
 	
 	<p>
@@ -37,6 +46,8 @@
 		Download at 8k resolution in .hdr format.
 	
 	</p>
+	
+	
 	
 	
 
