--- a/workshop.html
+++ b/workshop.html
@@ -47,6 +47,15 @@
 	
 	</p>
 	
+	<p>
+		<a href="https://drive.google.com/drive/folders/18MIQjd5JEwEnSJNiWf5PPWMz_7arT_ci?usp=sharing">
+			Upload world here >>>
+		</a>
+		<br>
+		Make sure you keep your scene file and HDR image together in the same folder!
+	
+	</p>
+	
 	
 	
 	
