--- a/442.html
+++ b/442.html
@@ -20,7 +20,7 @@
 	<h1 style = "margin-bottom:20px;">julian triveri</h1>
 	<p>3D generalist, tech artist, & VR software developer</p>
 	
-	<h3>Done this semester outside of work:</h3>
+	<h3>Done for 442:</h3>
 	
     <div class="circlesPacked">
 	
@@ -32,16 +32,17 @@
 			</div>
 		</a>
 		
-		<a class="packedCircle" href="/portfolio/lasso.html">
-			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
+		<a class="packedCircle" href="/portfolio/lasertag.html">
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasertag/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
-				VR lasso game-jam
+				MR laser tag prototype
 			</div>
         </a>
+		
 	</div>
 	
-	<h3>Job / previous projects:</h3>
+	<h3>Other work:</h3>
 	
 	<div class="circlesPacked">
         <a class="packedCircle" href="/portfolio/virutallab.html">
@@ -65,6 +66,14 @@
 			
 			<div class="thumbnail thumbtext">
 				AR nuclear pharmacy education
+			</div>
+        </a>
+		
+		<a class="packedCircle" href="/portfolio/lasso.html">
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasso/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				VR lasso game-jam
 			</div>
         </a>
 
