--- a/workshop.html
+++ b/workshop.html
@@ -48,17 +48,13 @@
 	</p>
 	
 	<p>
-		<a href="https://drive.google.com/drive/folders/18MIQjd5JEwEnSJNiWf5PPWMz_7arT_ci?usp=sharing">
+		<a href="https://drive.google.com/drive/folders/18MIQjd5JEwEnSJNiWf5PPWMz_7arT_ci">
 			Upload world here >>>
 		</a>
 		<br>
 		Make sure you keep your scene file and HDR image together in the same folder!
 	
 	</p>
-	
-	
-	
-	
 
 </article>
 
