--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -33,8 +33,8 @@
 	</div>
 	
 	<p>
-		I want mixed reality to be more than just a gimmick in games;
-		I want games and apps that don't just 'exist' in your physical environment,
+		I want mixed reality to be more than just a gimmick;
+		I want games that don't just 'exist' in your physical environment,
 		but respond to it and use it as part of the experience. 
 		
 		I also want games that encourage physical movement
@@ -54,20 +54,19 @@
 	</a>
 	
 	<p>
-		Laser bullets hit real surfaces using the headset's live 
-		depth sensing, so there is no need for each user to spend time
+		Laser bullets hit real objects using the headset's live 
+		depth understanding, so there is no need for each user to spend time
 		pre-scanning their environment. 
-		Players are meant to run around and find cover in their physical space.
+		Players are meant to run around and duck behind cover in their physical space.
 	</p>
 	
 	<p>
-		This technique comes with a major drawback. 
-		Players can't hit what the headset can't see, 
+		This technique does have a major drawback:
+		players can't hit what the headset can't see, 
 		so you can't shoot around corners or behind yourself.
-		However, this technique doesn't require the long setup
-		a proper room scanning stage would.
-		The game is convenient to setup, 
-		especially when I run the game with several non-techy friends.
+		However, this technique doesn't require room scanning
+		which would take a long time.
+		Using live depth makes setup much faster and more convenient.
 	</p>
 	
 	<h3><br>colocation anchors</h3>
@@ -77,11 +76,10 @@
 	</a>
 	
 	<p>
-		The host headset drops and syncs spatial anchors
-		as it moves around the space, giving the other headsets
-		absolute points to spatially calibrate to.
-		This means all the headset positions and rotations 
-		are synced up for everybody.
+		All the headset orientations sync up automatically.
+		The host headset automatically drops and syncs spatial anchors
+		as it moves around, giving the other headsets
+		absolute orientations to spatially calibrate to.
 	</p>
 	
 	<h3><br>third party art assets</h3>
