--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -69,11 +69,25 @@
 		Using live depth makes setup much faster and more convenient.
 	</p>
 	
+	<h3><br>starting a match</h3>
+	
+	<a href="lasertag/servers.jpg" target="_blank">
+		<img src="lasertag/servers.jpg">
+	</a>
+	
+	<p>
+		Reciting your IP to your friends, 
+		waiting for them to enter it, 
+		and trying to help them because it won't work isn't fun.
+		Starting a game should be frictionless, so
+		the headsets automatically find game hosts using UDP broadcasts. 
+	</p>
+	
 	<h3><br>colocation anchors</h3>
 	
-	<a href="lasertag/anchors.jpg" target="_blank">
-		<img src="lasertag/anchors.jpg">
-	</a>
+	<video autoplay muted playsinline loop 
+			src="lasertag/anchors.mp4"
+			style="width:100%; max-height:512px; margin:auto;"></video>
 	
 	<p>
 		All the headset orientations sync up automatically.
