--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -19,7 +19,7 @@
 
 	<h1>mixed reality lasertag prototype</h1>
 	<h3>
-		An MR laser blaster game for Meta Quest 3.<br>
+		Turn any space into a laser tag arena for you and your friends.<br>
 
 		<img class="software-icon" src="/resources/icons/meta.png">
 		<img class="software-icon" src="/resources/icons/unity.png">
@@ -34,15 +34,15 @@
 	
 	<p>
 		I want mixed reality to be more than just a gimmick;
-		I want games that don't just 'exist' in your physical environment,
-		but respond to it and use it as part of the experience. 
+		I want games that don't just exist in your environment,
+		but respond to it and take advantage of it. 
 		
 		I also want games that encourage physical movement
 		and real-life socializing. 
 	</p>
 	<p>
-		This MR laser tag prototype is my effort to make such a game.
-		It is a co-located multiplayer MR game that turns any physical space
+		This prototype is my effort to make such a game.
+		It is a co-located multiplayer mixed reality app that turns any space
 		into a large-scale laser tag arena for you and your friends. 
 	</p>
 	
@@ -64,8 +64,10 @@
 		This technique does have a major drawback:
 		players can't hit what the headset can't see, 
 		so you can't shoot around corners or behind yourself.
-		However, this technique doesn't require room scanning
-		which would take a long time.
+	</p>
+	<p>
+		However, this technique doesn't require that each player
+		spend several minutes carefully scan the space.
 		Using live depth makes setup much faster and more convenient.
 	</p>
 	
@@ -76,9 +78,8 @@
 	</a>
 	
 	<p>
-		Reciting your IP to your friends, 
-		waiting for them to enter it, 
-		and trying to help them because it won't work isn't fun.
+		Trying to get several friends to manually connect 
+		to your headset's IP is cumbersome.
 		Starting a game should be frictionless, so
 		the headsets automatically find game hosts using UDP broadcasts. 
 	</p>
@@ -91,14 +92,14 @@
 	
 	<p>
 		All the headset orientations sync up automatically.
-		The host headset automatically drops and syncs spatial anchors
-		as it moves around, giving the other headsets
-		absolute orientations to spatially calibrate to.
+		The host drops and syncs spatial anchors
+		as they move around, giving the other headsets
+		absolute reference points to spatially calibrate to.
 	</p>
 	
 	<h3><br>third party art assets</h3>
 	<p>
-		I'm using these assets as placeholders until I create custom assets:
+		The demo video at the top of the page uses these placeholder assets:
 	</p>
 	<ul>
 		<li><a href="https://sketchfab.com/3d-models/ray-gun-10b58d9be71d4003847e72d8d5e1dafe" target="_blank">
