--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -97,6 +97,17 @@
 		absolute reference points to spatially calibrate to.
 	</p>
 	
+		<h3><br>special thanks</h3>
+	<p>
+		I'd like to thank my friend
+			<a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
+		for spending several hours over the course of the project 
+		helping me test and troubleshoot.
+		Multiplayer VR games are difficult to test without other people
+		dedicating plenty of time to it, so I really appreciate it :)
+		
+	</p>
+	
 	<h3><br>third party art assets</h3>
 	<p>
 		The demo video at the top of the page uses these placeholder assets:
