--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -78,10 +78,9 @@
 	</a>
 	
 	<p>
-		Trying to get several friends to manually connect 
-		to your headset's IP is cumbersome.
+		Trying to connect several friends manually is cumbersome.
 		Starting a game should be frictionless, so
-		the headsets automatically find game hosts using UDP broadcasts. 
+		the headsets automatically list game hosts on the local network. 
 	</p>
 	
 	<h3><br>colocation anchors</h3>
@@ -102,7 +101,7 @@
 		I'd like to thank my friend
 			<a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
 		for spending several hours over the course of the project 
-		helping me test and troubleshoot.
+		helping me test and troubleshoot :)
 	</p>
 	
 	<h3><br>third party art assets</h3>
