--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -96,14 +96,6 @@
 		absolute reference points to spatially calibrate to.
 	</p>
 	
-	<h3><br>special thanks</h3>
-	<p>
-		I'd like to thank my friend
-			<a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
-		for spending several hours over the course of the project 
-		helping me test and troubleshoot :)
-	</p>
-	
 	<h3><br>third party art assets</h3>
 	<p>
 		The demo video at the top of the page uses these placeholder assets:
@@ -114,7 +106,13 @@
 		<li><a href="https://sketchfab.com/3d-models/helmet-v1-f0e261d8bca74c59bc12c854260f51cb" target="_blank">
 			Space Helmet by alienmonkei</a>
 	</ul>
-
+	
+	<h3><br>special thanks</h3>
+	<p>
+		I'd like to thank my friend
+			<a href="https://fizzyapple12.com/" target="_blank">Hazel</a>
+		for testing and troubleshooting!
+	</p>
 
 </article>
 
