--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -43,7 +43,10 @@
 		lightsabers and full-body characters in VR.
 	</p>
 	
-	<a href="mocap/fight.jpg" target="_blank"><img src="mocap/fight.jpg"></a>
+	<a href="mocap/fight2.png" target="_blank"><img src="mocap/fight2.png"></a>
+	
+	<br>
+	<br>
 	
 	<div>
 	<blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">I work with some pretty awesome people. VR light saber battles at the <a href="https://twitter.com/PurdueRCAC?ref_src=twsrc%5Etfw">@PurdueRCAC</a> Envision Center 20th anniversary open house today 🤖 ⚔️ <br><br>Best use of PVC pipe and pool noodles that I’ve ever seen, but the VR goggles and mocap suit obviously take it to a whole other level 👌🏼 <a href="https://t.co/jqHgVm2TUJ">pic.twitter.com/jqHgVm2TUJ</a></p>&mdash; Paul Branham (@BoilerPaulie) <a href="https://twitter.com/BoilerPaulie/status/1780627497240895618?ref_src=twsrc%5Etfw">April 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -51,7 +54,7 @@
 	
 	<h2>tracking &amp; calibration</h2>
 	
-	<a href="mocap/swords.jpg" target="_blank"><img src="mocap/swords.jpg"></a>
+	<a href="mocap/fight.jpg" target="_blank"><img src="mocap/fight.jpg"></a>
 	
 	<p>
 		OptiTrack's
@@ -64,7 +67,7 @@
 		and the latest version of OptiTrack's NatNet API.
 	</p>
 	
-	<a href="mocap/snapshot1.png" target="_blank"><img src="mocap/snapshot1.png"></a>
+	<a href="mocap/swords.jpg" target="_blank"><img src="mocap/swords.jpg"></a>
 	
 	<p>
 		While OptiTrack supports VR headset tracking, 
@@ -76,6 +79,8 @@
 	</p>
 	
 	<h2>visuals</h2>
+	
+	<a href="mocap/snapshot1.png" target="_blank"><img src="mocap/snapshot1.png"></a>
 	
 	<p>
 		Bright light trails are a lightsaber signature.
