--- a/portfolio/lasertag.html
+++ b/portfolio/lasertag.html
@@ -55,8 +55,7 @@
 	
 	<p>
 		Laser bullets hit real objects using the headset's live 
-		depth understanding, so there is no need for each user to spend time
-		pre-scanning their environment. 
+		depth understanding.
 		Players are meant to run around and duck behind cover in their physical space.
 	</p>
 	
@@ -67,7 +66,7 @@
 	</p>
 	<p>
 		However, this technique doesn't require that each player
-		spend several minutes carefully scan the space.
+		spend several minutes carefully scanning their space.
 		Using live depth makes setup much faster and more convenient.
 	</p>
 	
@@ -78,9 +77,10 @@
 	</a>
 	
 	<p>
-		Trying to connect several friends manually is cumbersome.
-		Starting a game should be frictionless, so
-		the headsets automatically list game hosts on the local network. 
+		Starting a game should be frictionless, but
+		manually connecting several headsets can be cumbersome.
+		The headsets automatically finds sessions on the local network
+		so you don't have to manually exchange and enter IP addresses.
 	</p>
 	
 	<h3><br>colocation anchors</h3>
@@ -91,9 +91,9 @@
 	
 	<p>
 		All the headset orientations sync up automatically.
-		The host drops and syncs spatial anchors
-		as they move around, giving the other headsets
-		absolute reference points to spatially calibrate to.
+		The host can drop and sync spatial anchors for the other
+		headsets to calibrate to. The game supports multiple anchors
+		so that you can build an arena spanning several rooms. 
 	</p>
 	
 	<h3><br>third party art assets</h3>
