add lasertag page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 			</div>
         </a>
 		
+		<a class="packedCircle" href="https://anagly.ph/" target="_blank">
+			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasertag/thumb.mp4"></video>
+			
+			<div class="thumbnail thumbtext">
+				MR laser tag prototype
+			</div>
+        </a>
+		
 		<a class="packedCircle" href="/portfolio/courthouse.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/courthouse/thumb.mp4"></video>
 			
