--- a/resources/nav.html
+++ b/resources/nav.html
@@ -16,6 +16,7 @@
 			<ul>
 				<li><a href="/index.html" target="_top">home</a></li>
 				<li><a href="/about.html" target="_top">about</a></li>
+				<li><a href="/blog.html" target="_top">misc</a></li>
 				<li><a href="/more.html" target="_top">misc</a></li>
 			</ul>
 
