--- a/blender.html
+++ b/blender.html
@@ -44,7 +44,6 @@
 	</a>
 	
 	<br>
-	<br>
 	
 	<h2>Tutorials</h2>
 	
@@ -56,6 +55,18 @@
 	
 	<a href="https://www.youtube.com/playlist?list=PLa1F2ddGya_-UvuAqHAksYnB0qL9yWDO6">
 		Fundamentals Series (OLD!!!) >>>
+	</a>
+	
+	<br>
+	
+	<a href="https://www.youtube.com/channel/UCZo92PCc9mUwfDkKqZkZVzg">
+		DewDiehard's character topology >>>
+	</a>
+	
+	<br>
+	
+	<a href="https://topologyguides.com">
+		Subsurface topology reference >>>
 	</a>
 	
 	</h2>
