--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
 <article>
 
-	<h1 style = "margin-bottom:20px;">julian triveri</h1>
+<h1>portfolio</h1>
+<p>Hey! The site is a bit out of date at the moment. I'm working on updating it :)
+
+<!-- 	<h1 style = "margin-bottom:20px;">julian triveri</h1> -->
 	
     <div class="circlesPacked">
 
