--- a/resources/nav.html
+++ b/resources/nav.html
@@ -28,7 +28,7 @@
 				<li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
 					sketchfab</a>
 
-				<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m
+<!-- 				<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m -->
 			</ul>
 			
 		</nav>
