--- a/resources/nav.html
+++ b/resources/nav.html
@@ -27,6 +27,8 @@
 					github</a>
 				<li><a href="https://sketchfab.com/trev3d" target="_blank" rel="noopener noreferrer">
 					sketchfab</a>
+				<li><a href="https://www.linkedin.com/in/jtriveri/" target="_blank" rel="noopener noreferrer">
+					linkedin</a>
 
 <!-- 				<li style="font-size: 14px;">triveri @t 0ut l0ok dot c0m -->
 			</ul>
