--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <article>
 
 <h1>portfolio</h1>
-<p>Hey! The site is a bit out of date at the moment. I'm working on updating it :)
+<h3>Hey! The site is a bit out of date at the moment. I'm working on updating it :)</h3>
 
 <!-- 	<h1 style = "margin-bottom:20px;">julian triveri</h1> -->
 	
