--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/lasertag/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
-				MR laser tag prototype
+				mixed reality laser tag
 			</div>
         </a>
 		
@@ -52,7 +52,7 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/surveymeter/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
-				AR nuclear pharmacy education
+				mixed reality nuclear pharmacy education
 			</div>
         </a>
 		
@@ -76,7 +76,7 @@
             <video class="thumbnail" autoplay muted playsinline loop src="/portfolio/snowman/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
-				WIP animations
+				work-in-progress animated shorts
 			</div>
         </a>
 		
