breaking my rule

--- a/neto.html
+++ b/neto.html
@@ -29,7 +29,7 @@
 <main>
 
 <p>I have one rule for this. When I type anything it stays. There will be no going back
-to revise things. I need to do this without overthinking.
+to revise things (I broke this rule a bit). I need to do this without overthinking.
 	
 <p>On Friday Nov 8th, at some time before 7pm, my best friend,
 Ernesto Tangassi Lucio, shot himself. He later died early Sunday.
@@ -37,7 +37,7 @@ Ernesto Tangassi Lucio, shot himself. He later died early Sunday.
 <p>I don't really know how to honor someone in a way that feels completely sincere
 publicly on the internet. I talked just last week to Ernesto about how I felt
 nothing I did really felt truly pure; everything I did was always, in one way or another,
-done to impress someone else or to get attention. 
+done to impress someone else or to get attention (he told me not to worry about this). 
 If it is possible for something to truly be pure then it should be this webpage.
 
 <p>I'm not meaning to pick favorites when I call him my 'best friend.'
@@ -46,6 +46,12 @@ else has. He was accepting of both my best and my worst traits, and I could be c
 with him like nobody else. It's funny because if something this bad were ever to happen,
 he'd be the one I'd reach out to to talk about it. It's a lot like that LCD Soundsystem
 song. 
+
+<p>I also don't claim to be <i>his</i> best friend. I think many people would actually
+consider him one of their best friends if not their best friend period. 
+He was that sort of person. He had a tremendous impact on the people around him and his 
+death has left such a vacuum. It sounds insanely cliche but it's true. 
+When I or anyone else would see him he'd brighten our day.
 
 <a href="https://www.youtube.com/watch?v=fLS5w43H-ik" target="_blank">
 "I wish that we could talk about it. But there, that's the problem." </a>
@@ -89,9 +95,8 @@ see you jot something down or make a little sketch in your notebook. I'm never a
 going to be able to buy you a Jones cream soda, or invite you to a movie night,
 or work on artwork for the lasertag game, or test some new project, or see a new
 art piece you drew. I'll never get to ask you to critique some character model I'm 
-working on. I never even finished a single thing for you. I'll never get to 
-go on a long walk with you through Purdue's Utility plant talking about whatever is on
-our minds. I'll never again get to tape a mazapan to Hazel's drone and fly it into your
+working on. I never even finished a single thing for you. 
+I'll never again get to tape a mazapan to Hazel's drone and fly it into your
 hands, or get a random sketch from you, something I never reciprocated and now never can.
 I'll never get to attend one of your perler bead events that you held because the 
 University forced you, as an RA, to hold social events for your floor even though nobody 
@@ -100,6 +105,18 @@ I'll never see that signature bike helmet of yours full of stickers. I want to p
 that helmet and preserve it forever. I'll never receive another 'bom dia' gif from you, 
 a funny callback to you talking about Latin American aunts and grandmothers. 
 I'll never get to sit down and talk while watching you draw something fantastic.
+I'll never get to talk to you about our favorite artists, brutalist architecture,
+ambient music, piano, the perfect ratios of face proportions to create an
+appealing looking character, constructivism, how 'joever' it is, while you're 
+probably drawing on your iPad.
+I'll never get to send you a picture of a cool building I'm in. Whenever I'm in a cool
+building I'll think of you.
+I'll never go on another 3 hour walk late at night talking about life, God, how 
+fucked up the world is, and how good the world is.
+I'll never run into you in the Union as you're playing the piano on the stage
+near the Starbucks and chat with you while I wait for overpriced coffee.
+Every time I hear a piano on campus I'll probably reflexively wonder if it's you playing
+and if I'll get to say hi for a split second, and I'll then remember what happened.
 I should have been a better friend while you were still here, and I will be a better
 friend to everyone else in your honor. I will try my best. I know, Ernesto, 
 you said I was a good friend, but just take my word for it that I could have been better. 
@@ -107,9 +124,9 @@ I will kill all of my ego and snark. And if I ever forget to then I'll rectify i
 as I remember you and this promise that I made to you.
 
 <p>I'm sitting here in the hotel bathroom typing this. The lights are off and the shower
-is on; it's set to cold because I don't want to waste warm water and I have my jacket on.
-It's not like one of those cheesy movie scenes though where someone is all
-depressed and crying with the shower on. Instead it's because of this thing called
+is on; it's set to cold because I don't want to waste warm water and I'm wearing my coat.
+But it's not like one of those cheesy movie scenes though where someone is all
+depressed and crying with the shower running. Instead it's because of this thing called
 'water sounds.' I wish I could tell you about what 'water sounds' was. I think
 you would have liked it.
 
@@ -122,7 +139,7 @@ You would have loved sitting in my place I think.
 I said prayers for you and your family; your siblings and your parents. I will say more.
 I can't imagine how they feel. I am devastated for them. 
 
-<p>You too were one of a kind. Cheers dude. I forgive you. It's all good.</p>
+<p>You too were one of a kind. Cheers dude. I forgive you. It's all good.
 
 </main>
 </body>
