breaking the rule again

--- a/neto.html
+++ b/neto.html
@@ -46,15 +46,14 @@ else has. He was accepting of both my best and my worst traits, and I could be c
 with him like nobody else. It's funny because if something this bad were ever to happen,
 he'd be the one I'd reach out to to talk about it. It's a lot like that LCD Soundsystem
 song. 
+<a href="https://www.youtube.com/watch?v=fLS5w43H-ik" target="_blank">
+"I wish that we could talk about it. But there, that's the problem." </a>
 
 <p>I also don't claim to be <i>his</i> best friend. I think many people would actually
 consider him one of their best friends if not their best friend period. 
 He was that sort of person. He had a tremendous impact on the people around him and his 
 death has left such a vacuum. It sounds insanely cliche but it's true. 
 When I or anyone else would see him he'd brighten our day.
-
-<a href="https://www.youtube.com/watch?v=fLS5w43H-ik" target="_blank">
-"I wish that we could talk about it. But there, that's the problem." </a>
 
 <p>I wish I could joke about this whole situation with him. 
 He would find it funny. We had that sort of raport.
@@ -108,7 +107,7 @@ I'll never get to sit down and talk while watching you draw something fantastic.
 I'll never get to talk to you about our favorite artists, brutalist architecture,
 ambient music, piano, the perfect ratios of face proportions to create an
 appealing looking character, constructivism, how 'joever' it is, while you're 
-probably drawing on your iPad.
+ drawing on your iPad.
 I'll never get to send you a picture of a cool building I'm in. Whenever I'm in a cool
 building I'll think of you.
 I'll never go on another 3 hour walk late at night talking about life, God, how 
