--- a/neto.html
+++ b/neto.html
@@ -100,27 +100,34 @@ hands, or get a random sketch from you, something I never reciprocated and now n
 I'll never get to attend one of your perler bead events that you held because the 
 University forced you, as an RA, to hold social events for your floor even though nobody 
 ever attended them and I never did because I'd sleep in every Saturday and miss them.
+I and the other guys will never again get to bike with you across campus to someone's
+dorm to hangout or grab some food.
 I'll never see that signature bike helmet of yours full of stickers. I want to photoscan
 that helmet and preserve it forever. I'll never receive another 'bom dia' gif from you, 
 a funny callback to you talking about Latin American aunts and grandmothers. 
 I'll never get to sit down and talk while watching you draw something fantastic.
 I'll never get to talk to you about our favorite artists, brutalist architecture,
 ambient music, piano, the perfect ratios of face proportions to create an
-appealing looking character, constructivism, how 'joever' it is, while you're 
- drawing on your iPad.
-I'll never get to send you a picture of a cool building I'm in. Whenever I'm in a cool
-building I'll think of you.
-I'll never go on another 3 hour walk late at night talking about life, God, how 
-fucked up the world is, and how good the world is.
+appealing looking character, constructivism, or how 'joever' it is while you're 
+drawing on your iPad. I'll never get to send you a picture of a cool building I'm in. 
+Whenever I'm in a cool building I'll think of you.
+I'll never go on another 3 hour walk late at night, past the utility plant,
+past the airport, on that dark path on the southern edge of campus, talking about 
+whatever is on our minds. 
 I'll never run into you in the Union as you're playing the piano on the stage
 near the Starbucks and chat with you while I wait for overpriced coffee.
 Every time I hear a piano on campus I'll probably reflexively wonder if it's you playing
 and if I'll get to say hi for a split second, and I'll then remember what happened.
-I should have been a better friend while you were still here, and I will be a better
+
+<p>I wish I remembered our conversations better. I wish I had finished something for
+your birthday only a couple weeks ago. I wish I ever finished anything for you.
+
+<p>I should have been a better friend while you were still here, and I will be a better
 friend to everyone else in your honor. I will try my best. I know, Ernesto, 
 you said I was a good friend, but just take my word for it that I could have been better. 
-I will kill all of my ego and snark. And if I ever forget to then I'll rectify it as soon 
-as I remember you and this promise that I made to you.
+I will kill all of my ego and snark and selfishness. 
+And if I ever forget to then I'll rectify it as soon as I remember you and this 
+promise that I made to you.
 
 <p>I'm sitting here in the hotel bathroom typing this. The lights are off and the shower
 is on; it's set to cold because I don't want to waste warm water and I'm wearing my coat.
@@ -134,11 +141,13 @@ at that point. Us sitting in the car with the lights off,
 hearing the rain patter on the roof. It was the essence of 'water sounds.' 
 You would have loved sitting in my place I think.
 
-<p>I lit a candle for you at Saint Tom's. I'll light several more probably.
+<p>I lit a candle for you at St. Thom's. I'll light several more probably.
 I said prayers for you and your family; your siblings and your parents. I will say more.
 I can't imagine how they feel. I am devastated for them. 
 
 <p>You too were one of a kind. Cheers dude. I forgive you. It's all good.
+
+<p>🫡
 
 </main>
 </body>
